--- a/ClientApp/src/app/accident/accident.component.html
+++ b/ClientApp/src/app/accident/accident.component.html
@@ -26,11 +26,11 @@
       <div class="col-3">
         <span class="label">On or Off the Job</span>
         <select class="form-control">
-          <option selected>Text</option>
-          <option>On the Job Only</option>
-          <option>Off the Job Only</option>
+          <option selected>On and off the job</option>
+          <option> Off the job only</option>
+          <option>Both</option>
         </select>
-  
+      
       </div>
       <app-radio-button></app-radio-button>
       <div class="col-3 mb-2">
