--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -73,7 +73,7 @@
         </div>
 
       </div>
-      <div class="row mt-2">
+      <!-- <div class="row mt-2">
         <app-radio-button></app-radio-button>
         <div class="col-3">
           <span class="label label-default">Child GI Amount Max</span>
@@ -89,7 +89,7 @@
           <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Child Max Amount">
         </div>
 
-      </div>
+      </div> -->
 
 
 
