--- a/ClientApp/src/app/radio-button/radio-button.component.html
+++ b/ClientApp/src/app/radio-button/radio-button.component.html
@@ -20,3 +20,12 @@
     </label>
   </div>
   
+  <!-- <mat-radio-group
+  aria-labelledby="radio-group-label"
+  class="radio-group"
+  [(ngModel)]="favoriteSeason">
+  <mat-radio-button class="radio-button" *ngFor="let season of seasons" [value]="season">
+    {{season}}
+  </mat-radio-button>
+</mat-radio-group> -->
+<!-- <div>Your favorite season is: {{favoriteSeason}}</div> -->
