--- a/ClientApp/src/app/vol-group-life/vol-group-life.component.html
+++ b/ClientApp/src/app/vol-group-life/vol-group-life.component.html
@@ -81,23 +81,20 @@
           </div>
   
         </div>
-        <div class="row mt-2">
+        <!-- <div class="row mt-2">
           <app-radio-button></app-radio-button>
           <div class="col-3">
             <span class="label label-default">Child GI Amount Max</span>
   
             <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Child GI Amount Max">
           </div>
-          <!-- <div class="col-3">
-            <span class="label label-default">Child QI Amount Max</span>
-            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Child QI Amount Max">
-          </div> -->
+         
           <div class="col-3">
             <span class="label label-default">Child Max Amount</span>
             <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Child Max Amount">
           </div>
   
-        </div>
+        </div> -->
   
   
   
