--- a/ClientApp/src/app/fpp-individual/fpp-individual.component.html
+++ b/ClientApp/src/app/fpp-individual/fpp-individual.component.html
@@ -65,7 +65,7 @@
         </div>
 
       </div>
-      <div class="row mt-2">
+      <!-- <div class="row mt-2">
         <app-radio-button></app-radio-button>
         <div class="col-3">
           <span class="label label-default">Child GI Amount Max</span>
@@ -81,7 +81,7 @@
           <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Child Max Amount">
         </div>
 
-      </div>
+      </div> -->
 
 
 
@@ -130,7 +130,7 @@
             </div>
             <div class="col" style="justify-content:flex-start;margin-right: 170px;
             margin-top: 24px;">
-              <mat-checkbox class="example-margin" [(ngModel)]="checked" name="Qol">QOL Rider</mat-checkbox>
+              <mat-checkbox class="margin" [(ngModel)]="checked" name="Qol">QOL Rider</mat-checkbox>
             </div>
           </div>
         </div>
@@ -141,7 +141,7 @@
             </div>
             <div class="col" style="margin-right: 170px;
           margin-top: 24px;">
-              <mat-checkbox class="example-margin" [(ngModel)]="indeterminate" name="Waiver">Waiver</mat-checkbox>
+              <mat-checkbox class="margin" [(ngModel)]="indeterminate" name="Waiver">Waiver</mat-checkbox>
             </div>
           </div>
         </div>
