--- a/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.css
+++ b/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.css
@@ -1,3 +1,19 @@
 .appmt-container .mat-form-field + .mat-form-field {
     margin-left: 8px;
   }
+
+
+  /* .example-h2 {
+    margin: 10px;
+  }
+   */
+  /* .section {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    height: 60px;
+  }
+   */
+  .margin {
+    margin: 0 10px;
+  }
