--- a/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
+++ b/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
@@ -1,40 +1,39 @@
+<div class="container">
 
-    <div class="container">
-    
-        <div class="row">
-          <app-radio-button></app-radio-button>
-          <div class="col-3">
-            <span class="label label-default">Group Effective Date</span>
-            <input type="date" [value]="dateValue" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
-              placeholder="Group Effective Date">
-  
-          </div>
-          <app-radio-button></app-radio-button>
-          <div class="col-3">
-            <span class="label label-default">Sitius State</span>
-            <select class="form-control" [value]="lookupValue">
-              <!-- <option value="0" selected="selected">{{ lookupValue }}</option> -->
-              <option  *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">
-                {{lookUpDataSitusState.state}}</option>
-  
-            </select>
-          
-          </div>
-          <div class="col-3 mt-4">
-            <button class="btn btn-primary" type="submit">Reset Form </button>
-          </div>
-        </div>
-          
-           
-          
-        <div class="mt-4">
-  
-        <app-agent-setup></app-agent-setup>
-        </div>
+  <div class="row">
+    <app-radio-button></app-radio-button>
+    <div class="col-3">
+      <span class="label label-default">Group Effective Date</span>
+      <input type="date" [value]="dateValue" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
+        placeholder="Group Effective Date">
+
     </div>
-    
+    <app-radio-button></app-radio-button>
+    <div class="col-3">
+      <span class="label label-default">Sitius State</span>
+      <select class="form-control" [value]="lookupValue">
+        <!-- <option value="0" selected="selected">{{ lookupValue }}</option> -->
+        <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">
+          {{lookUpDataSitusState.state}}</option>
+
+      </select>
+
+    </div>
+    <div class="col-3 mt-4">
+      <button class="btn btn-primary" type="submit">Reset Form </button>
+    </div>
+  </div>
 
 
 
+  <div class="mt-4">
 
+    <app-agent-setup></app-agent-setup>
+    <div class="mt-4">
+      <mat-checkbox class="margin" [(ngModel)]="name">Child Name</mat-checkbox>
+      <mat-checkbox class="margin" [(ngModel)]="dob">Child Date of Birth </mat-checkbox>
+      <mat-checkbox class="margin" [(ngModel)]="gender">Child Gender</mat-checkbox>
+    </div>
 
+  </div>
+</div>
