--- a/ClientApp/src/app/custom-bulk-update/custom-bulk-update.component.html
+++ b/ClientApp/src/app/custom-bulk-update/custom-bulk-update.component.html
@@ -1,11 +1,9 @@
 <div class="container">
-    <div class="col-md-4 form-group"style="padding-left:0px;">
-        <label for="grpNum">Group Number</label>
-        <select class="select-dropdown form-control" id="grpNum"  name="grpNum">
-        <option selected>Select</option>
-            <option value="22345">22345</option>
-            <option value="12345">12345</option>
-        </select>
+    <div class="row">
+        <div class="col-md-4 form-group">
+            <label>Group Number</label>
+            <input type="number" class="form-control" placeholder="Enter Group Number">
+        </div>
     </div>
     <div id="accordion" class="accordion">
         <div class="card mt-2" style="cursor: pointer;">
@@ -31,23 +29,23 @@
                       <tr>
                         <td>Employee Question 1</td>
                         <td>
-                            <div>
+                            <div style="text-align: center;">
                                 <input type="checkbox" id="customCheck1E">
-                                <label for="customCheck1E" style="margin-left: 2px;">Y/N</label>
+                                <label for="customCheck1E" style="margin-left: 2px;">Y</label>
                             </div>
                         </td>
                         <td>Spouse Question 1</td>
                         <td>
-                            <div>
+                            <div style="text-align: center;">
                                 <input type="checkbox" id="customCheck1S">
-                                <label for="customCheck1S" style="margin-left: 2px;">Y/N</label>
+                                <label for="customCheck1S" style="margin-left: 2px;">Y</label>
                             </div>
                         </td>
                         <td>Child First Name 01</td>
                         <td>
-                            <div>
+                            <div style="text-align: center;">
                                 <input type="checkbox" id="customCheck1C">
-                                <label for="customCheck1C" style="margin-left: 2px;">Y/N</label>
+                                <label for="customCheck1C" style="margin-left: 2px;">Y</label>
                             </div>
                         </td>
                       </tr>
@@ -55,23 +53,23 @@
                       <tr>
                         <td>Employee Question 2</td>
                         <td>
-                            <div>
+                            <div style="text-align: center;">
                                 <input type="checkbox" id="customCheck2E">
-                                <label for="customCheck2E" style="margin-left: 2px;">Y/N</label>
+                                <label for="customCheck2E" style="margin-left: 2px;">Y</label>
                             </div>
                         </td>
                         <td>Spouse Question 2</td>
                         <td>
-                            <div>
+                            <div style="text-align: center;">
                                 <input type="checkbox" id="customCheck2S">
-                                <label for="customCheck2S" style="margin-left: 2px;">Y/N</label>
+                                <label for="customCheck2S" style="margin-left: 2px;">Y</label>
                             </div>
                         </td>
                         <td>Child Last Name 01</td>
                         <td>
-                            <div>
+                            <div style="text-align: center;">
                                 <input type="checkbox" id="customCheck2C">
-                                <label for="customCheck2C" style="margin-left: 2px;">Y/N</label>
+                                <label for="customCheck2C" style="margin-left: 2px;">Y</label>
                             </div>
                         </td>
                       </tr>
@@ -79,23 +77,23 @@
                      <tr>
                         <td>Employee Question 3A</td>
                         <td>
-                            <div>
+                            <div style="text-align: center;">
                                 <input type="checkbox" id="customCheck1E">
-                                <label for="customCheck1E" style="margin-left: 2px;">Y/N</label>
+                                <label for="customCheck1E" style="margin-left: 2px;">Y</label>
                             </div>
                         </td>
                         <td>Spouse Question 3A</td>
                         <td>
-                            <div>
+                            <div style="text-align: center;">
                                 <input type="checkbox" id="customCheck1S">
-                                <label for="customCheck1S" style="margin-left: 2px;">Y/N</label>
+                                <label for="customCheck1S" style="margin-left: 2px;">Y</label>
                             </div>
                         </td>
                         <td>Child Date of Birth 01</td>
                         <td>
-                            <div>
+                            <div style="text-align: center;">
                                 <input type="checkbox" id="customCheck1C">
-                                <label for="customCheck1C" style="margin-left: 2px;">Y/N</label>
+                                <label for="customCheck1C" style="margin-left: 2px;">Y</label>
                             </div>
                         </td>
                       </tr>
@@ -103,23 +101,23 @@
                       <tr>
                         <td>Employee Question 3B</td>
                         <td>
-                            <div>
+                            <div style="text-align: center;">
                                 <input type="checkbox" id="customCheck1E">
-                                <label for="customCheck1E" style="margin-left: 2px;">Y/N</label>
+                                <label for="customCheck1E" style="margin-left: 2px;">Y</label>
                             </div>
                         </td>
                         <td>Spouse Question 3B</td>
                         <td>
-                            <div>
+                            <div style="text-align: center;">
                                 <input type="checkbox" id="customCheck1S">
-                                <label for="customCheck1S" style="margin-left: 2px;">Y/N</label>
+                                <label for="customCheck1S" style="margin-left: 2px;">Y</label>
                             </div>
                         </td>
                         <td>Child Gender 01</td>
                         <td>
-                            <div>
+                            <div style="text-align: center;">
                                 <input type="checkbox" id="customCheck1C">
-                                <label for="customCheck1C" style="margin-left: 2px;">Y/N</label>
+                                <label for="customCheck1C" style="margin-left: 2px;">Y</label>
                             </div>
                         </td>
                       </tr>
@@ -127,16 +125,16 @@
                       <tr>
                         <td>Employee Question 3C</td>
                         <td>
-                            <div>
+                            <div style="text-align: center;">
                                 <input type="checkbox" id="customCheck1E">
-                                <label for="customCheck1E" style="margin-left: 2px;">Y/N</label>
+                                <label for="customCheck1E" style="margin-left: 2px;">Y</label>
                             </div>
                         </td>
                         <td>Spouse Question 3C</td>
                         <td>
-                            <div>
+                            <div style="text-align: center;">
                                 <input type="checkbox" id="customCheck1S">
-                                <label for="customCheck1S" style="margin-left: 2px;">Y/N</label>
+                                <label for="customCheck1S" style="margin-left: 2px;">Y</label>
                             </div>
                         </td>
                         <td></td>
@@ -146,16 +144,16 @@
                       <tr>
                         <td>Employee Question 4</td>
                         <td>
-                            <div>
+                            <div style="text-align: center;">
                                 <input type="checkbox" id="customCheck1E">
-                                <label for="customCheck1E" style="margin-left: 2px;">Y/N</label>
+                                <label for="customCheck1E" style="margin-left: 2px;">Y</label>
                             </div>
                         </td>
                         <td>Spouse Question 4</td>
                         <td>
-                            <div>
+                            <div style="text-align: center;">
                                 <input type="checkbox" id="customCheck1S">
-                                <label for="customCheck1S" style="margin-left: 2px;">Y/N</label>
+                                <label for="customCheck1S" style="margin-left: 2px;">Y</label>
                             </div>
                         </td>
                         <td></td>
@@ -165,20 +163,28 @@
                       <tr>
                         <td>Employee Question 5</td>
                         <td>
-                            <div>
+                            <div style="text-align: center;">
                                 <input type="checkbox" id="customCheck1E">
-                                <label for="customCheck1E" style="margin-left: 2px;">Y/N</label>
+                                <label for="customCheck1E" style="margin-left: 2px;">Y</label>
                             </div>
                         </td>
                         <td>Spouse Question 5</td>
                         <td>
-                            <div>
+                            <div style="text-align: center;">
                                 <input type="checkbox" id="customCheck1S">
-                                <label for="customCheck1S" style="margin-left: 2px;">Y/N</label>
+                                <label for="customCheck1S" style="margin-left: 2px;">Y</label>
                             </div>
                         </td>
                         <td></td>
                         <td></td>
+                      </tr>
+                      <tr>
+                          <td><app-radio-button></app-radio-button></td>
+                          <td></td>
+                          <td><app-radio-button></app-radio-button></td>
+                          <td></td>
+                          <td><app-radio-button></app-radio-button></td>
+                          <td></td>
                       </tr>
 
                     </tbody>
