--- a/ClientApp/src/app/fpp-individual/fpp-individual.component.html
+++ b/ClientApp/src/app/fpp-individual/fpp-individual.component.html
@@ -1,7 +1,7 @@
-<div class="container" style="width: 100%;">
+<div class="container">
 
-  <form>
-    <div style=" margin-left: 15px;">
+  <form class="ml-3">
+   
       <div class="row">
         <app-radio-button></app-radio-button>
         <div class="col-3">
@@ -19,11 +19,11 @@
           <button class="btn btn-primary" type="submit">Reset Form </button>
         </div>
       </div>
-    </div>
+    
 
-    <div class="container">
+  
 
-      <div class="row" style="margin-top: 10px;">
+      <div class="row">
 
         <app-radio-button></app-radio-button>
         <div class="col-3">
@@ -65,36 +65,20 @@
         </div>
 
       </div>
-      <!-- <div class="row mt-2">
-        <app-radio-button></app-radio-button>
-        <div class="col-3">
-          <span class="label label-default">Child GI Amount Max</span>
-
-          <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Child GI Amount Max">
-        </div>
-        <div class="col-3">
-          <span class="label label-default">Child QI Amount Max</span>
-          <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Child QI Amount Max">
-        </div>
-        <div class="col-3">
-          <span class="label label-default">Child Max Amount</span>
-          <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Child Max Amount">
-        </div>
-
-      </div> -->
+     
 
 
 
       <div class="row mt-2">
         <app-radio-button></app-radio-button>
-        <div class="col-3">
+        <div class="col-4">
 
           <span class="label label-default">Open Enrollment GI</span>
           <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Open Enrollment GI">
         </div>
 
         <app-radio-button></app-radio-button>
-        <div class="col-3">
+        <div class="col-4">
           <span class="label label-default">Plan code manual Entry</span>
           <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Plan code manual Entry">
         </div>
@@ -103,14 +87,14 @@
 
       <div class="row mt-2">
         <app-radio-button></app-radio-button>
-        <div class="col-3">
+        <div class="col-4">
 
           <span class="label label-default">User Token</span>
           <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="User Token">
         </div>
 
         <app-radio-button></app-radio-button>
-        <div class="col-3">
+        <div class="col-4">
           <span class="label label-default">Case Token</span>
           <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Case Token">
         </div>
@@ -149,7 +133,7 @@
       </div>
 
 
-    </div>
+   
     <div class="mt-4">
       <app-agent-setup></app-agent-setup>
     </div>
