--- a/ClientApp/src/app/vol-group-life/vol-group-life.component.html
+++ b/ClientApp/src/app/vol-group-life/vol-group-life.component.html
@@ -12,7 +12,7 @@
           </div>
           <app-radio-button></app-radio-button>
           <div class="col-3">
-            <span class="label label-default">Sitius State</span>
+            <span class="label label-default">Situs State</span>
             <select class="form-control" [value]="lookupValue">
               <!-- <option value="0" selected="selected">{{ lookupValue }}</option> -->
               <option  *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">
