--- a/ClientApp/src/app/radio-button/radio-button.component.html
+++ b/ClientApp/src/app/radio-button/radio-button.component.html
@@ -1,25 +1,28 @@
 
-<div class="form-check">
-    <input class="form-check-input" type="radio" value="option1" >
-    <label class="form-check-label" >
-        100% override
-    </label> 
-</div>
-<div class="form-check">
- 
-    <input class="form-check-input" type="radio"  value="option2" checked>
-    <label class="form-check-label" >
-        Partial update
-    </label>
-</div>
-
-<div class="form-check">
-    <input class="form-check-input" type="radio"  value="option3">
-    <label class="form-check-label" >
-        Validate
-    </label>
-  </div>
+<form >
+    <div class="form-check">
+        <input class="form-check-input" id="override" name="radioButtons" type="radio" value="option1" >
+        <label class="form-check-label" for="override" >
+            100% override
+        </label> 
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="radio" name="radioButtons" id="partialupdate"  value="option2" checked>
+        <label class="form-check-label" for="partialupdate" >
+            Partial update
+        </label>
+    </div>
+    
+    <div class="form-check">
+        <input class="form-check-input" type="radio" name="radioButtons" id="validate" value="option3">
+        <label class="form-check-label" for="validate">
+            Validate
+        </label>
+      </div>
+</form>
   
+
+
   <!-- <mat-radio-group
   aria-labelledby="radio-group-label"
   class="radio-group"
